--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <body>
     <header class="page-header">
       <nav class="main-nav">
-        <a href="./index.html" class="first-logo"
-          >Web<span class="first-web">Studio</span></a
-        >
+        <a href="./index.html" class="first-logo">
+          Web<span class="first-web">Studio</span>
+        </a>
         <ul class="nav-list">
           <li class="nav-item">
             <a href="./index.html" class="menu">Studio</a>
@@ -91,7 +91,7 @@
         <ul class="team-list">
           <li class="team-member">
             <img
-              src="./images/imges/img1.jpg"
+              src="./images/img1.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -101,7 +101,7 @@
           </li>
           <li class="team-member">
             <img
-              src="./images/imges/img2.jpg"
+              src="./images/img2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -111,7 +111,7 @@
           </li>
           <li class="team-member">
             <img
-              src="./images/imges/img3.jpg"
+              src="./images/img3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -121,7 +121,7 @@
           </li>
           <li class="team-member">
             <img
-              src="./images/imges/img4.jpg"
+              src="./images/img4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
@@ -138,7 +138,7 @@
         <ul class="portfolio-list">
           <li class="portfolio-item">
             <img
-              src="./images/macap/macap1.jpg"
+              src="./images/macap1.jpg"
               alt="Banking App"
               width="360"
               height="300"
@@ -148,7 +148,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/macap/macap2.jpg"
+              src="./images/macap2.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
@@ -158,7 +158,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/macap/macap3.jpg"
+              src="./images/macap3.jpg"
               alt="Meditation App"
               width="360"
               height="300"
@@ -168,7 +168,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/macap/macap4.jpg"
+              src="./images/macap4.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
@@ -178,7 +178,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/macap/macap5.jpg"
+              src="./images/macap5.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
@@ -188,7 +188,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images/macap/macap6.jpg"
+              src="./images/macap6.jpg"
               alt="Online Courses"
               width="360"
               height="300"
@@ -201,9 +201,9 @@
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="last-logo"
-        >Web<span class="dark-studio">Studio</span></a
-      >
+      <a href="./index.html" class="last-logo">
+        Web<span class="dark-studio">Studio</span>
+      </a>
       <p class="last">
         Increase the flow of customers and sales for your business with digital
         marketing &amp; growth solutions.
