--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             >
           </li>
           <li class="contact-item">
-            <a href="tel:+110001111111" class="phone">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="email">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
