--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
     <title>WEBSTUDIO</title>
     <link
       rel="stylesheet"
@@ -11,203 +10,194 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
-    <header class="page-header">
-      <nav class="main-nav">
+    <header>
+      <nav>
         <a href="./index.html" class="first-logo">
           Web<span class="first-web">Studio</span>
         </a>
-        <ul class="nav-list">
-          <li class="nav-item">
+        <ul>
+          <li>
             <a href="./index.html" class="menu">Studio</a>
           </li>
-          <li class="nav-item"><a href="#" class="menu">Portfolio</a></li>
-          <li class="nav-item"><a href="#" class="menu">Contacts</a></li>
+          <li>
+            <a href="" class="menu">Portfolio</a>
+          </li>
+          <li>
+            <a href="" class="menu">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address class="address">
-        <ul class="contact-list">
-          <li class="contact-item">
+        <ul>
+          <li>
             <a href="mailto:info@devstudio.com" class="email"
-              >info@devstudio.com</a
-            >
+              >info@devstudio.com
+            </a>
           </li>
-          <li class="contact-item">
-            <a href="tel:+110001111111" class="email">+11 (000) 111-11-11</a>
+          <li>
+            <a href="tel:+110001111111" class="email">+11 (000) 111-11-11 </a>
           </li>
         </ul>
       </address>
     </header>
-
     <main>
-      <!-- HERO -->
       <section class="header-section">
         <h1 class="main-header">Effective Solutions for Your Business</h1>
         <button type="button" class="order-button">Order Service</button>
       </section>
-
-      <!-- FEATURES -->
-      <section class="features-section">
-        <h2 class="features-title">Our Advantages</h2>
-        <ul class="features-list">
-          <li class="feature-item">
-            <h3 class="feature-name">Strategy</h3>
-            <p class="feature-description">
+      <section>
+        <h2 class="header-two">Characteristics</h2>
+        <ul>
+          <li>
+            <h3 class="characteristics">Strategy</h3>
+            <p class="definition">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="feature-item">
-            <h3 class="feature-name">Punctuality</h3>
-            <p class="feature-description">
+          <li>
+            <h3 class="characteristics">Punctuality</h3>
+            <p class="definition">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="feature-item">
-            <h3 class="feature-name">Diligence</h3>
-            <p class="feature-description">
+          <li>
+            <h3 class="characteristics">Diligence</h3>
+            <p class="definition">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
-          <li class="feature-item">
-            <h3 class="feature-name">Technologies</h3>
-            <p class="feature-description">
+          <li>
+            <h3 class="characteristics">Technologies</h3>
+            <p class="definition">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-
-      <!-- TEAM -->
       <section class="team-section">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-member">
+        <h2 class="our-team">Our Team</h2>
+        <ul>
+          <li class="list">
             <img
-              src="./images/imges/img1.jpg"
+              src="./images/MarkGuerrero.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-role">Product Designer</p>
+            <h3 class="members">Mark Guerrero</h3>
+            <p class="profession">Product Designer</p>
           </li>
-          <li class="team-member">
+          <li class="list">
             <img
-              src="./images/imges/img2.jpg"
+              src="./images/TomFord.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
             />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-role">Frontend Developer</p>
+            <h3 class="members">Tom Ford</h3>
+            <p class="profession">Frontend Developer</p>
           </li>
-          <li class="team-member">
+          <li class="list">
             <img
-              src="./images/imges/img3.jpg"
+              src="./images/CamilaGarcia.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
             />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-role">Marketing</p>
+            <h3 class="members">Camila Garcia</h3>
+            <p class="profession">Marketing</p>
           </li>
-          <li class="team-member">
+          <li class="list">
             <img
-              src="./images/imges/img4.jpg"
+              src="./images/DanielWilson.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-role">UI Designer</p>
+            <h3 class="members">Daniel Wilson</h3>
+            <p class="profession">UI Designer</p>
           </li>
         </ul>
       </section>
-
-      <!-- PORTFOLIO -->
-      <section class="portfolio-section">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
+      <section>
+        <h2 class="portfolio">Our Portfolio</h2>
+        <ul>
+          <li>
             <img
-              src="./images/macap/macap5.jpg"
+              src="./images/BankingApp.jpg"
               alt="Banking App"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-name">Banking App</h3>
-            <p class="portfolio-type">App</p>
+            <h3 class="projects">Banking App</h3>
+            <p class="form">App</p>
           </li>
-          <li class="portfolio-item">
+          <li>
             <img
-              src="./images/macap/macap2.jpg"
-              alt="Cashless Payment"
+              src="./images/CashlessPayment.jpg"
+              alt="A Phone"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-name">Cashless Payment</h3>
-            <p class="portfolio-type">Marketing</p>
+            <h3 class="projects">Cashless Payment</h3>
+            <p class="form">Marketing</p>
           </li>
-          <li class="portfolio-item">
+          <li>
             <img
-              src="./images/macap/macap3.jpg"
-              alt="Meditation App"
+              src="./images/MeditationApp.jpg"
+              alt="Gadgets"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-name">Meditation App</h3>
-            <p class="portfolio-type">App</p>
+            <h3 class="projects">Meditation App</h3>
+            <p class="form">App</p>
           </li>
-          <li class="portfolio-item">
+          <li>
             <img
-              src="./images/macap/macap4.jpg"
-              alt="Taxi Service"
+              src="./images/TaxiService.jpg"
+              alt="A Wheel"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-name">Taxi Service</h3>
-            <p class="portfolio-type">Marketing</p>
+            <h3 class="projects">Taxi Service</h3>
+            <p class="form">Marketing</p>
           </li>
-          <li class="portfolio-item">
+          <li>
             <img
-              src="./images/macap/macap5.jpg"
-              alt="Screen Illustrations"
+              src="./images/ScreenIllustrations.jpg"
+              alt="Screens"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-name">Screen Illustrations</h3>
-            <p class="portfolio-type">Design</p>
+            <h3 class="projects">Screen Illustrations</h3>
+            <p class="form">Design</p>
           </li>
-          <li class="portfolio-item">
+          <li>
             <img
-              src="./images/macap/macap6.jpg"
-              alt="Online Courses"
+              src="./images/OnlineCourses.jpg"
+              alt="Happy Girl"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-name">Online Courses</h3>
-            <p class="portfolio-type">Marketing</p>
+            <h3 class="projects">Online Courses</h3>
+            <p class="form">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-
     <footer class="footer">
-      <a href="./index.html" class="last-logo">
-        Web<span class="dark-studio">Studio</span>
-      </a>
+      <a href="./index.html" class="last-logo"
+        >Web<span class="dark-studio">Studio</span></a
+      >
       <p class="last">
         Increase the flow of customers and sales for your business with digital
         marketing &amp; growth solutions.
