--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <ul>
           <li class="list">
             <img
-              src="./images/MarkGuerrero.jpg"
+              src="./images/imges/img1.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -98,7 +98,7 @@
           </li>
           <li class="list">
             <img
-              src="./images/TomFord.jpg"
+              src="./images/imges/img2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -108,7 +108,7 @@
           </li>
           <li class="list">
             <img
-              src="./images/CamilaGarcia.jpg"
+              src="./images/imges/img3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -118,7 +118,7 @@
           </li>
           <li class="list">
             <img
-              src="./images/DanielWilson.jpg"
+              src="./images/imges/img4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
@@ -133,7 +133,7 @@
         <ul>
           <li>
             <img
-              src="./images/BankingApp.jpg"
+              src="./images/macap/macap1.jpg"
               alt="Banking App"
               width="360"
               height="300"
@@ -143,7 +143,7 @@
           </li>
           <li>
             <img
-              src="./images/CashlessPayment.jpg"
+              src="./images/macap/macap2.jpg"
               alt="A Phone"
               width="360"
               height="300"
@@ -153,7 +153,7 @@
           </li>
           <li>
             <img
-              src="./images/MeditationApp.jpg"
+              src="./images/macap/macap3.jpg"
               alt="Gadgets"
               width="360"
               height="300"
@@ -163,7 +163,7 @@
           </li>
           <li>
             <img
-              src="./images/TaxiService.jpg"
+              src="./images/macap/macap4.jpg"
               alt="A Wheel"
               width="360"
               height="300"
@@ -173,7 +173,7 @@
           </li>
           <li>
             <img
-              src="./images/ScreenIllustrations.jpg"
+              src="./images/macap/macap5.jpg"
               alt="Screens"
               width="360"
               height="300"
@@ -183,7 +183,7 @@
           </li>
           <li>
             <img
-              src="./images/OnlineCourses.jpg"
+              src="./images/macap/macap6.jpg"
               alt="Happy Girl"
               width="360"
               height="300"
